<resources>
    <string name="app_name">TaskThree</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="increase_button">Arttır</string>
    <string name="switch_button">viewmodel off/on</string>
    <string name="vm_text">0</string>
    <string name="fragment_text">0</string>
    <string name="text_view_hint">Enter your guess:</string>
    <string name="try_again_message">Tekrar dene!</string>
    <string name="win_message">Kazandın!</string>
    <string name="guess_character_hint">Doğru Cevap: %1$d</string>
    <string name="gues_number_message">Tahmin edilmesi gerekilen sayı %1$d</string>
    <string name="enter_character_message">Karakter girin!!</string>
    <string name="button_clear">Clear</string>
    <string name="button_guess">Guess</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="g_task">Guess Task</string>

</resources>